example/secondfile/objects/RDS_Validation_Configuration__c.object
<CustomObject>
    <description>Child object of RDS-Validation</description>
    <fields>
        <fullName>ATT_IP_Address_V6__c</fullName>
        <label>ATT IP Address V6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATT_IP_Address__c</fullName>
        <label>ATT IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoSChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CoSChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_IP_Address_V6__c</fullName>
        <label>Customer IP Address V6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_IP_V4_Address__c</fullName>
        <label>Customer IP V4 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealHashId__c</fullName>
        <description>Technical field not required on page layout.</description>
        <formula>RDS_Validation__r.DealHashID__c</formula>
        <label>DealHashId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_COS_Profile_ID__c</fullName>
        <label>Egress COS Profile ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_Profile_ID__c</fullName>
        <label>Egress Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Version__c</fullName>
        <label>IP Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Profile_ID__c</fullName>
        <label>Ingress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_Profile_ID_Current__c</fullName>
        <label>Ingress Profile ID Current</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_Profile_ID__c</fullName>
        <label>Ingress Profile ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>106</fullName>
                </value>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>124</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>161</fullName>
                </value>
                <value>
                    <fullName>162</fullName>
                </value>
                <value>
                    <fullName>163</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingress_Vlan__c</fullName>
        <label>Ingress Vlan Change ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Action__c</fullName>
        <formula>RDS_Validation__r.MACD_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACD Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Feature__c</fullName>
        <label>MACD Change Feature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlan Disconnected</fullName>
                </value>
                <value>
                    <fullName>Vlan Add</fullName>
                </value>
                <value>
                    <fullName>VLAN Speed Change</fullName>
                </value>
                <value>
                    <fullName>CoS Change</fullName>
                </value>
                <value>
                    <fullName>Add CoS</fullName>
                </value>
                <value>
                    <fullName>Remove CoS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>V4 MD5 call Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDSValidationRelatedQuote__c</fullName>
        <formula>RDS_Validation__r.Related_quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDSValidationRelatedQuote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Validation__c</fullName>
        <description>Reference to Parent record</description>
        <label>RDS-Validation</label>
        <referenceTo>RDS_Validation__c</referenceTo>
        <relationshipLabel>RDS-Validation Configurations</relationshipLabel>
        <relationshipName>RDS_Validation_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Selected_CoS__c</fullName>
        <label>Selected CoS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_on_Validation__c</fullName>
        <defaultValue>&quot;Not Active&quot;</defaultValue>
        <description>Technical field not required on Pagelayout</description>
        <label>Status on Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Mask_V4__c</fullName>
        <label>Subnet Mask V4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unilink__c</fullName>
        <label>Unilink</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_ASN_Override_Indicator__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V4 Autonomous System Number Override</description>
        <label>V4 ASN Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Encrypted_Password__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V4 MD5 Authentication</description>
        <label>V4 Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Routing_ASN__c</fullName>
        <description>RDS Validation-RDS-Validation Configuration-V4 Autonomous System Number</description>
        <label>V4 Routing ASN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Routing_Protocol__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V4Routing Protocol</description>
        <label>V4 Routing Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Send_Default_Indicator__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V4 Restrictive Routing</description>
        <label>V4 Send Default Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_ASN_Override_Indicator__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V6 Autonomous System Number Override</description>
        <label>V6 ASN Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_Encrypted_Password__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V6 MD5 Authentication</description>
        <label>V6 Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_MD5_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>V6 MD5 required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V6_Routing_ASN__c</fullName>
        <description>RDS Validation-RDS-Validation Configuration-V6 Autonomous System Number</description>
        <label>V6 Routing ASN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_Routing_Protocol__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V6Routing Protocol</description>
        <label>V6 Routing Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_Send_Default_Indicator__c</fullName>
        <description>RDS Validation-RDS Validation Configuration-V6 Restrictive Routing</description>
        <label>V6 Send Default Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLANID__c</fullName>
        <label>VLANID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Information_Name__c</fullName>
        <label>VLAN Information Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed_Change__c</fullName>
        <label>VLAN Speed Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed_Current__c</fullName>
        <label>VLAN Speed Current</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed_Roll_up__c</fullName>
        <label>VLAN Speed Change Portal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed__c</fullName>
        <label>VLAN Speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Connection_Type__c</fullName>
        <label>VPN Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Name__c</fullName>
        <label>VPN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Premise_Number__c</fullName>
        <description>Technical field not required on page layout</description>
        <formula>RDS_Validation__r.Premise_Number__c</formula>
        <label>Validation Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workactionlist__c</fullName>
        <label>Workactionlist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBackend__c</fullName>
        <formula>RDS_Validation__r.isbackend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBackend</label>
        <type>Text</type>
    </fields>
    <label>RDS-Validation Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VAL-CONFIG-{0000}</displayFormat>
        <label>RDS-Validation Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Validation Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>